# retinal-constraints

./: .gitignore  CLAUDE.md  compare_all_rf.py  demo_layers.py  demo_video.py  demo_video_gpu.py  dog_layer.py  dog_layer_adaptive.py  download_imagenet.py  download_imagenette.py  eval_ablation.py  eval_ablation_v3.py  eval_ablation_v4.py  eval_cifar.py  eval_cifar_v2.py  eval_retina_layers.py  eval_robustness.py  main.py  model.py  plot_sparsity.py  pyproject.toml  results_ablation.txt  results_ablation_v2.txt  results_ablation_v3.txt  results_ablation_v4.txt  results_layers.txt  results_log.txt  results_log_v2.txt  retina_preprocessor.py  retina_preprocessor_gpu.py  setup_server.sh  train.py  train_sparse.py  visualize.py  visualize_bottleneck.py
results/: bn2_sp0.0001_history.json  bn2_sp0.001_history.json  bn2_sp0.01_history.json  bn2_sp0.1_history.json  bn2_sp0_history.json  bottleneck_16_history.json  bottleneck_1_history.json  bottleneck_2_history.json  bottleneck_32_history.json  bottleneck_4_history.json  bottleneck_8_history.json  cifar_robustness.json  cifar_robustness_v2.json  robustness_results.json
